# hmlp

./: .travis.yml  CHANGELOG.md  CMakeLists.txt  CREDITS  Dockerfile  INSTALL  LICENSE  LICENSE.md  README.md  README.rst  set_env.sh  set_env_ices.sh  set_env_tacc.sh  todo
.github/: CONTRIBUTING
artifact/sc17gofmm/: artifact_sc17gofmm.cpp  figure5.cpp  figure6.cpp  run_artifact_sc17gofmm_default.sh  run_artifact_sc17gofmm_with_points.sh  run_figure5.sh  run_figure6.sh
artifact/sc18gofmm/: artifact_sc18gofmm.cpp  run_artifact_sc18gofmm_default.sh  sbatch_artifact_sc18gofmm_default.sh
cmake/: Findopenblas.cmake  sandbox_CMakeLists.txt
cmake/Modules/: FindMKL.cmake
doc/: Doxyfile
doc/html/: coverage_details.artifact_sc18gofmm_artifact_sc18gofmm.cpp.html  coverage_details.frame_base_DistData.hpp.html  coverage_details.frame_base_hmlp_mpi.cpp.html  coverage_details.frame_base_util.hpp.html  coverage_details.frame_containers_OOCCovMatrix.hpp.html  coverage_details.frame_containers_VirtualMatrix.hpp.html  coverage_details.frame_external_dgeqp4.c.html  coverage_details.frame_primitives_gemm.hpp.html  coverage_details.gofmm_igofmm_mpi.hpp.html  coverage_details.html  coverage_details.kernel_x86_64_haswell_bli_gemm_asm_d6x8.cpp.html  coverage_details.kernel_x86_64_haswell_bli_gemm_asm_d8x6.cpp.html  coverage_details.package_x86_64_haswell_gkmx.cpp.html  coverage_details.package_x86_64_haswell_gsknn.cpp.html  coverage_details.package_x86_64_haswell_gsks.cpp.html  coverage_details.package_x86_64_haswell_strassen.cpp.html
docs/: Doxyfile
docs/html/: _cache_8hpp_source.html  _data_8hpp_source.html  _dist_data_8hpp_source.html  _kernel_matrix_8hpp_source.html  _m_l_p_gauss_newton_8hpp_source.html  _o_o_c_cov_matrix_8hpp_source.html  _p_v_f_m_m_kernel_matrix_8hpp_source.html  _s_p_d_matrix_8hpp_source.html  _view_8hpp_source.html  _virtual_function_8hpp_source.html  _virtual_matrix_8hpp_source.html  annotated.html  annotated_dup.js  arm_2armv8a_2rank__k__d6x8_8hpp_source.html  blas_8h_source.html  blas__lapack_8hpp_source.html  blas__lapack__prototypes_8h_source.html  cheb__utils_8hpp_source.html  classes.html  classhmlp_1_1_cache-members.html  classhmlp_1_1_cache.html  classhmlp_1_1_cache.js  classhmlp_1_1_cache1_d-members.html  classhmlp_1_1_cache1_d.html  classhmlp_1_1_cache1_d.js  classhmlp_1_1_cache2_d-members.html  classhmlp_1_1_cache2_d.html  classhmlp_1_1_cache2_d.js  classhmlp_1_1_cache_line-members.html  classhmlp_1_1_cache_line.html  classhmlp_1_1_cache_line.js  classhmlp_1_1_cluster-members.html  classhmlp_1_1_cluster.html  classhmlp_1_1_cluster.js  classhmlp_1_1_cov_reduce_task-members.html  classhmlp_1_1_cov_reduce_task.html  classhmlp_1_1_cov_reduce_task.js  classhmlp_1_1_cov_task-members.html  classhmlp_1_1_cov_task.html  classhmlp_1_1_cov_task.js  (+835 more)
example/: costomized_kernel.cpp  custom_kernel.cpp  distributed_fast_matvec_solver.cpp  distributed_matrix.cpp  distributed_nearest_neighbor.cpp  fast_matvec_solver.cpp  kij_interface_inheritance.cpp  nearest_neighbor.cpp  run_gofmm_userdefined.sh  sbatch_dense_matrix_benchmark.sh  sbatch_gofmm_chao.sh  sbatch_gofmm_out_of_core.sh  sbatch_gofmm_userdefine.sh  sbatch_strong_scaling_p128.sh  sbatch_strong_scaling_p16.sh  sbatch_strong_scaling_p32.sh  sbatch_strong_scaling_p4.sh  sbatch_strong_scaling_p64.sh  sbatch_strong_scaling_p8.sh  sbatch_weak_scaling_p128.sh  sbatch_weak_scaling_p16.sh  sbatch_weak_scaling_p32.sh  sbatch_weak_scaling_p4.sh  sbatch_weak_scaling_p64.sh  sbatch_weak_scaling_p8.sh  test_gofmm.cpp  test_mpigofmm.cpp
frame/: blas_lapack_prototypes.hpp  cnn.hpp  conv2d.hpp  data.hpp  gkmm_gpu.hpp  gkmx.cpp  gkmx.hpp  gkmx.hxx  gkmx_gpu.hpp  gkrm_gpu.hpp  gofmm.hpp  gofmm_gpu.hpp  gsknn.hpp  gsks.cpp  gsks.hpp  gsks.hxx  hfamily.hpp  hmlp_blas_lapack.cpp  hmlp_blas_lapack.cu  hmlp_blas_lapack.h  hmlp_cublas_lapck.cu  hmlp_device.cpp  hmlp_device.hpp  hmlp_gpu.hpp  hmlp_mpi.cpp  hmlp_mpi.hpp  hmlp_packing.hpp  hmlp_packing.hxx  hmlp_runtime.cpp  hmlp_runtime.hpp  hmlp_thread.cpp  hmlp_thread.hpp  hmlp_thread_communicator.cpp  hmlp_thread_communicator.hpp  hmlp_thread_info.cpp  hmlp_thread_info.hpp  hmlp_util.hpp  hmlp_util.hxx  iaskit.hpp  lowrank.hpp  (+8 more)
frame/base/: Data.hpp  DistData.hpp  View.hpp  blas_lapack.cpp  blas_lapack.cu  blas_lapack.hpp  blas_lapack_prototypes.hpp  device.cpp  device.hpp  hmlp_blas_lapack.cpp  hmlp_blas_lapack.h  hmlp_device.cpp  hmlp_device.hpp  hmlp_gpu.hpp  hmlp_mpi.cpp  hmlp_mpi.hpp  hmlp_packing.hpp  hmlp_runtime.cpp  hmlp_runtime.hpp  hmlp_tci.cpp  hmlp_tci.hpp  hmlp_thread.cpp  hmlp_thread.hpp  hmlp_util.hpp  mpi_prototypes.hpp  runtime.cpp  runtime.hpp  tci.cpp  tci.hpp  thread.cpp  thread.hpp  util.cpp  util.hpp
frame/containers/: Cache.hpp  Cache_old.hpp  DistData.hpp  DistKernelMatrix.hpp  DistKernelMatrix_ver2.hpp  DistSPDMatrix.hpp  DistVirtualMatrix.hpp  GNHessian.hpp  KernelMatrix.hpp  MLPGaussNewton.hpp  OOCCovMatrix.hpp  PVFMMKernelMatrix.hpp  SPDMatrix.hpp  View.hpp  VirtualMatrix.hpp  data.hpp  kernel.hpp  tree.hpp  view.hpp
frame/gofmm/: gofmm.hpp  gofmm_gpu.cu  gofmm_gpu.hpp  gofmm_mpi.hpp  hfamily.hpp  (+4 more)
gofmm/: gofmm.hpp  gofmm_gpu.hpp  gofmm_mpi.hpp  igofmm.hpp  igofmm_mpi.hpp  tree.hpp  tree_mpi.hpp
include/: hmlp.h  hmlp_base.hpp  hmlp_internal.hpp  hmlp_internal.hxx  pyhmlp.h
python/: conv2d.py  example.py  gofmm.py  gofmm.pyx  gofmmmodule.cpp  hmlp.py  hmlp.pyx  hmlpmodule.cpp  install.in.sh  setup.in.py  test_PyHMLP.py
test/: hello_world.cpp  matrix2binary.cpp  run_cluster.sh  run_conv2d.sh  run_gkmx.sh  run_gkmx_gpu.sh  run_gofmm_userdefined.sh  run_gsknn.sh  run_gsks.sh  run_hmlp.sh  run_spdaskit.sh  run_strassen.sh  sbatch_gofmm_userdefine.sh  sbatch_unit_test.sh  test_cluster.cpp  test_cluster.hpp  test_conv2d.cpp  test_conv_relu_pool.cpp  test_gkmm_gpu.cu  test_gkmx.cpp  test_gnbx.cpp  test_gofmm.cpp  test_gsknn.cpp  test_gsks.cpp  test_hmlp.cpp  test_mpigofmm.cpp  test_nbody.cpp  test_regression.cpp  test_skel.cpp  test_spdaskit.cpp  test_strassen.cpp  test_strassen_gpu.cu  test_supermatrix.cpp  test_tree.cpp  testsuit.sh  unitTest.cpp
(+286 files in other folders)
